<resources>
    <string name="app_name">PSLab</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="Toast_double_tap">Press again to close PSLab</string>
    <string name="Toast_magnetic_not_present">"The sensor required for this instrument is not present in your device"</string>
    <string name="nav_device">Connect Device</string>
    <string name="nav_instruments">Instruments</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_documentation">Documentation</string>
    <string name="nav_buy_pslab">Buy PSLab</string>
    <string name="nav_report">Feedback &amp; Bugs</string>
    <string name="nav_help_feedback">FAQ</string>
    <string name="nav_share">Share App</string>
    <string name="nav_config">Generate Config File</string>
    <string name="pslab_pinlayout">Pin Layout</string>
    <string name="pslab_pinlayout_front">Pin Layout Front</string>
    <string name="pslab_pinlayout_back">Pin Layout Back</string>
    <string name="bluetooth_connect_menu">Bluetooth Connection</string>
    <string name="bluetooth_wifi_connect_option">Connect using Bluetooth or Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">WiFi</string>
    <string name="bluetooth_scan_text">Scan</string>
    <string name="bluetooth_stop_text">Stop</string>
    <string name="scanned_devices_list_title">Scanned Devices</string>
    <string name="bluetooth_not_supported">Your phone does not support bluetooth</string>
    <string name="incorrect_IP_address_message">Please enter valid IP address</string>
    <string name="enter_IP_hint">Enter IP address of ESP module</string>
    <string name="esp_connect_text">Connect</string>
    <string name="oscilloscope">Oscilloscope</string>
    <string name="multimeter">Multimeter</string>
    <string name="logical_analyzer">Logic Analyzer</string>
    <string name="wave_generator">Wave Generator</string>
    <string name="sensors">Sensors</string>
    <string name="power_source">Power Source</string>
    <string name="record_title">Record current data</string>
    <string name="setting_auto_start_key">setting_auto_start</string>
    <string name="setting_auto_start_summary">Auto start app when PSLab device is connected</string>
    <string name="settting_auto_start_title">Auto Start</string>
    <string name="setting_data_format_key">export_data_format_list</string>
    <string name="setting_data_format_title">Export Data Format</string>
    <string name="control_item_1">Control</string>
    <string name="control_item_2">Read</string>
    <string name="control_item_3">Advanced</string>
    <string name="about_us_description">The goal of PSLab is to create an Open Source hardware device (open on all layers) that can be used for experiments by teachers, students and citizen scientists. Our tiny pocket lab provides an array of sensors for doing science and engineering experiments. It provides functions of numerous measurement devices including an oscilloscope, a waveform generator, a frequency counter, a programmable voltage, current source and as a data logger.</string>
    <string-array name="nav_item_activity_titles">
        <item>Instruments</item>
        <item>Logged Data</item>
        <item>Connect Device</item>
        <item>Generate Config File</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Rate App</item>
        <item>Buy PSLab</item>
        <item>FAQs</item>
        <item>Share App</item>
    </string-array>
    <string name="application_icon">Application Icon</string>
    <string-array name="multimeter_knob_states">
        <item>CH1</item>
        <item>CAP</item>
        <item>VOL</item>
        <item>RES</item>
        <item>C</item>
        <item>LA1</item>
        <item>LA2</item>
        <item>LA3</item>
        <item>LA4</item>
        <item>CH3</item>
        <item>CH2</item>
    </string-array>
    <string-array name="multimeter_params">
        <item>CH1</item>
        <item>CH2</item>
        <item>CH3</item>
        <item>MIC</item>
        <item>CAP</item>
        <item>VOL</item>
        <item>RES</item>
        <item>C</item>
        <item>LA1</item>
        <item>LA2</item>
        <item>LA3</item>
        <item>LA4</item>
    </string-array>
    <string-array name="multimeter_params_title">
        <item>Channel 1</item>
        <item>Channel 2</item>
        <item>Channel 3</item>
        <item>Microphone</item>
        <item>CAP Voltage</item>
        <item>Voltage</item>
        <item>Resistance</item>
        <item>Capacitance</item>
        <item>Logic Analyzer Pin 1</item>
        <item>Logic Analyzer Pin 2</item>
        <item>Logic Analyzer Pin 3</item>
        <item>Logic Analyzer Pin 4</item>
    </string-array>
    <string-array name="oscilloscope_params">
        <item>CH1</item>
        <item>CH2</item>
        <item>CH3</item>
        <item>MIC</item>
    </string-array>
    <string-array name="oscilloscope_params_title">
        <item>Channel 1</item>
        <item>Channel 2</item>
        <item>Channel 3</item>
        <item>Microphone</item>
    </string-array>
    <string-array name="logic_analyzer_params">
        <item>LA1</item>
        <item>LA2</item>
        <item>LA3</item>
        <item>LA4</item>
    </string-array>
    <string-array name="logic_analyzer_params_title">
        <item>Logic Analyzer Pin 1</item>
        <item>Logic Analyzer Pin 2</item>
        <item>Logic Analyzer Pin 3</item>
        <item>Logic Analyzer Pin 4</item>
    </string-array>
    <string-array name="barometer_params">
        <item>Pressure</item>
    </string-array>
    <string-array name="accelerometer_params">
        <item>Ax</item>
        <item>Ay</item>
        <item>Az</item>
    </string-array>
    <string-array name="accelerometer_params_title">
        <item>Acceleration X axis</item>
        <item>Acceleration Y axis</item>
        <item>Acceleration Z axis</item>
    </string-array>
    <string-array name="luxmeter_params">
        <item>Lux</item>
    </string-array>
    <string-array name="interval_units">
        <item>sec</item>
        <item>min</item>
        <item>hr</item>
        <item>day</item>
    </string-array>
    <string name="select_instrument_title">Instrument:</string>
    <string name="time_interval_title">Time Interval:</string>
    <string name="time_interval_hint">Logging Interval</string>
    <string name="create_config_btn_text">Create Config File</string>
    <string name="select_params_title">Select Params</string>
    <string name="no_interval_message">Please select logging interval</string>
    <string name="file_created_success_message">Config file created successfully</string>
    <string name="file_created_fail_message">Create config file failed</string>
    <string name="id1">LA1</string>
    <string name="id2">LA2</string>
    <string name="id3">LA3</string>
    <string name="id4">LA4</string>
    <string name="count_pulse">Count Pulse</string>
    <string name="capacitance_unit">Farad</string>
    <string name="frequency_unit">Hz</string>
    <string name="multimeter_voltage_unit">Volts</string>
    <string name="voltage_channels">Voltage</string>
    <string name="resistance_abbreviation">\u2126</string>
    <string name="multimeter_measure">Measure</string>
    <string name="multimeter_angle_1">33</string>
    <string name="multimeter_angle_3">65</string>
    <string name="multimeter_angle_4">98</string>
    <string name="multimeter_angle_5">131</string>
    <string name="multimeter_angle_6">164</string>
    <string name="multimeter_angle_7">196</string>
    <string name="multimeter_angle_8">229</string>
    <string name="multimeter_angle_9">262</string>
    <string name="multimeter_angle_10">294</string>
    <string name="multimeter_angle_11">327</string>
    <string name="multimeter_angle_12">0</string>
    <string name="set">SET</string>
    <string name="read">READ</string>
    <string name="resistance">Resistance</string>
    <string name="capacitance">Capacitance</string>
    <string name="frequency">Frequency</string>
    <string name="count_pulses">Count Pulses</string>
    <string-array name="ID">
        <item>LA1</item>
        <item>LA2</item>
        <item>LA3</item>
        <item>LA4</item>
    </string-array>
    <string name="reset">RESET</string>
    <string name="voltage">Voltage</string>
    <string name="ch1">CH1</string>
    <string name="ch2">CH2</string>
    <string name="ch3">CH3</string>
    <string name="cap">CAP</string>
    <string name="sen">RES</string>
    <string name="an8">VOL</string>
    <string name="w1">Wave 1</string>
    <string name="w2">Wave 2</string>
    <string name="phase">Phase</string>
    <string name="output">Output</string>
    <string name="dutycycle">Duty cycle</string>
    <string name="sqr1">SQR1</string>
    <string name="sqr2">SQR2</string>
    <string name="sqr3">SQR3</string>
    <string name="sqr4">SQR4</string>
    <string name="freq_range">10Hz-5kHz</string>
    <string name="zero">0</string>
    <string-array name="wave_type">
        <item>SINE</item>
        <item>SQUARE</item>
    </string-array>
    <string name="digital_outputs">Digital Outputs</string>
    <string name="configure_PWM">Configure PWM</string>
    <string name="waveform_generator">Arbitrary Waveform Generator</string>
    <string name="autoscan">Autoscan</string>
    <string name="select_sensor">Select Sensor</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="x_axis">X axis</string>
    <string name="y_axis">Y axis</string>
    <string name="z_axis">Z axis</string>
    <string name="text_max">Max</string>
    <string name="text_min">Min</string>
    <string name="meters_per_sec_text">ms&lt;sup&gt;&lt;small&gt;-2&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="meters_per_sec_html">ms<sup><small>-2</small></sup></string>
    <string name="radian_per_sec_text">rads&lt;sup&gt;&lt;small&gt;-1&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="radian_per_sec_html">rads<sup><small>-1</small></sup></string>
    <string name="time_seconds">Time (s)</string>
    <string name="accelerometer_intro">Accelerometer is used to measure acceleration of a body along the X, Y and Z axis.\n</string>
    <string name="accelerometer_description_text">\n\nThe figure above shows the direction of all the three axis when the mobile is held straight.\n\nSteps to measure acceleration in PSLab app:\n\n\u2022 Hold the device as shown in the above figure.\n\n\u2022 Accelerate the device along any one or multiple axis.\n\n\u2022 Observe the values in the cards or the plotted graph of any particular axis.\n\nThe Accelerometer instrument can also be used to measure the acceleration of a moving body by placing the device on/inside the body and then accelerating the body.\n\nNOTE: Don\'t accelerate the body if the device isn\'t properly attached else the device could be damaged. </string>
    <string name="no_accelerometer_sensor">Device does not have any accelerometer sensor</string>
    <string name="not_connected">Not Connected</string>
    <string name="initialising_wait">Initialising Wait…</string>
    <string name="raw_data">Raw Data</string>
    <string name="object_temp">Object Temp</string>
    <string name="ambient_temp">Ambient Temp</string>
    <string name="infinite_symbol">∞</string>
    <string name="timegap">Timegap</string>
    <string name="no_of_samples">No. of samples</string>
    <string name="temp2">Temp.</string>
    <string name="seconds">(s)</string>
    <string name="celcius">(°C)</string>
    <string name="time_space">Time </string>
    <string name="hundred_ms">100 ms</string>
    <string name="plot_object_temperature">Plot - Object Temperature</string>
    <string name="plot_ambient_temperature">Plot - Ambient Temperature</string>
</resources>