<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sensor_control_dock_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/sensor_control_doc_height"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    android:layout_margin="@dimen/margin_5dp"
    android:background="@drawable/la_custom_border"
    android:gravity="top">

    <ImageButton
        android:id="@+id/imageButton_play_pause_sensor"
        android:layout_width="@dimen/sensor_control_dock_image_button_width"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/circle_play_button" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editBox_samples_sensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/control_margin_small"
        android:layout_toStartOf="@+id/tv_timegap_label"
        android:layout_toEndOf="@+id/imageButton_play_pause_sensor"
        android:hint="@string/no_of_samples"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="@dimen/textsize_edittext" />

    <CheckBox
        android:id="@+id/checkBox_samples_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editBox_samples_sensors"
        android:layout_alignParentEnd="true"
        android:text="@string/infinite_symbol" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editBox_samples_sensors"
        android:layout_alignBottom="@+id/imageButton_play_pause_sensor"
        android:text="@string/timegap" />

    <SeekBar
        android:id="@+id/seekBar_timegap_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toStartOf="@+id/tv_timegap_label"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_timegap_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox_samples_sensor"
        android:layout_alignBottom="@+id/seekBar_timegap_sensor"
        android:layout_alignParentEnd="true"
        android:text="@string/hundred_ms"
        android:textSize="@dimen/textsize_edittext" />

</RelativeLayout>