<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sensor_control_dock_layout"
        android:layout_below="@id/app_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/title_padding"
                    android:text="@string/raw_data"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sensor_title_font"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/tv_sensor_height"
                            android:gravity="center_vertical"
                            android:text="@string/object_temp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sensor_body_font"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/tv_sensor_height"
                            android:gravity="center_vertical"
                            android:text="@string/ambient_temp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sensor_body_font"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_sensor_mlx90614_object_temp"
                            android:layout_width="@dimen/tv_sensor_width"
                            android:layout_height="@dimen/tv_sensor_height"
                            android:background="@drawable/tv_border"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sensor_body_font"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_sensor_mlx90614_ambient_temp"
                            android:layout_width="@dimen/tv_sensor_width"
                            android:layout_height="@dimen/tv_sensor_height"
                            android:background="@drawable/tv_border"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sensor_body_font"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:src="@drawable/mlx90614" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/title_padding"
                    android:text="@string/plot_object_temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sensor_title_font"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="40dp">

                    <RelativeLayout
                        android:id="@+id/chart_xaxis_layout_objtemp_mlx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#000"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_graph_label_xaxis_objtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_vertical|center_horizontal|center"
                            android:foregroundGravity="center_vertical"
                            android:gravity="center_vertical|center_horizontal|center"
                            android:text="@string/time_space"
                            android:textColor="#ffff"
                            android:textSize="@dimen/text_size_9sp"
                            android:textStyle="normal|bold"
                            tools:layout_editor_absoluteX="288dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/tv_unit_xaxis_objtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/tv_graph_label_xaxis_objtemp_mlx"
                            android:text="@string/seconds"
                            android:textColor="#ffff"
                            android:textSize="@dimen/text_size_9sp"
                            android:textStyle="normal|bold"
                            app:layout_constraintLeft_toRightOf="@+id/tv_graph_label_xaxis_objtemp_mlx"
                            tools:layout_editor_absoluteY="0dp" />

                    </RelativeLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/chart_yaxis_layout_objtemp_mlx"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#000"
                        android:foregroundGravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_label_left_yaxis_objtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="10dp"
                            android:layout_gravity="center"
                            android:foregroundGravity="center_horizontal"
                            android:gravity="top|center_horizontal"
                            android:includeFontPadding="false"
                            android:rotation="-90"
                            android:text="@string/temp2"
                            android:textColor="#ffff"
                            android:textSize="@dimen/text_size_8sp"
                            android:textStyle="normal|bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_unit_left_yaxis_objtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/tv_label_left_yaxis_objtemp_mlx"
                            android:layout_marginBottom="12dp"
                            android:rotation="-90"
                            android:text="@string/celcius"
                            android:textColor="#fff"
                            android:textSize="@dimen/text_size_8sp"
                            android:textStyle="normal|bold"
                            app:layout_constraintBottom_toTopOf="@+id/tv_label_left_yaxis_objtemp_mlx"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart_obj_temp_mlx"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/chart_xaxis_layout_objtemp_mlx"
                        android:layout_toEndOf="@+id/chart_yaxis_layout_objtemp_mlx"
                        android:background="#000" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin_bottom">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/title_padding"
                    android:text="@string/plot_ambient_temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sensor_title_font"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="40dp">

                    <RelativeLayout
                        android:id="@+id/chart_xaxis_layout_ambtemp_mlx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#000"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_graph_label_xaxis_ambtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_vertical|center_horizontal|center"
                            android:foregroundGravity="center_vertical"
                            android:gravity="center_vertical|center_horizontal|center"
                            android:text="@string/time_space"
                            android:textColor="#ffff"
                            android:textSize="@dimen/text_size_9sp"
                            android:textStyle="normal|bold"
                            tools:layout_editor_absoluteX="288dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/tv_unit_xaxis_ambtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/tv_graph_label_xaxis_ambtemp_mlx"
                            android:text="@string/seconds"
                            android:textColor="#ffff"
                            android:textSize="@dimen/text_size_9sp"
                            android:textStyle="normal|bold"
                            app:layout_constraintLeft_toRightOf="@+id/tv_graph_label_xaxis_ambtemp_mlx"
                            tools:layout_editor_absoluteY="0dp" />

                    </RelativeLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/chart_yaxis_layout_ambtemp_mlx"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#000"
                        android:foregroundGravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_label_left_yaxis_ambtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="10dp"
                            android:layout_gravity="center"
                            android:foregroundGravity="center_horizontal"
                            android:gravity="top|center_horizontal"
                            android:includeFontPadding="false"
                            android:rotation="-90"
                            android:text="@string/temp2"
                            android:textColor="#ffff"
                            android:textSize="@dimen/text_size_8sp"
                            android:textStyle="normal|bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_unit_left_yaxis_ambtemp_mlx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/tv_label_left_yaxis_ambtemp_mlx"
                            android:layout_marginBottom="12dp"
                            android:rotation="-90"
                            android:text="@string/celcius"
                            android:textColor="#fff"
                            android:textSize="@dimen/text_size_8sp"
                            android:textStyle="normal|bold"
                            app:layout_constraintBottom_toTopOf="@+id/tv_label_left_yaxis_ambtemp_mlx"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart_amb_temp_mlx"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/chart_xaxis_layout_ambtemp_mlx"
                        android:layout_toEndOf="@+id/chart_yaxis_layout_ambtemp_mlx"
                        android:background="#000" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/sensor_control_dock" />

</RelativeLayout>